--- a/18-09-05.md
+++ b/18-09-05.md
@@ -17,7 +17,8 @@
 ## 프로그램의 실행 방식 
 - 컴파일러: 기계어로 변환해주는 프로그램. 메모리에 탑재되자마자 바로 실행되므로-> 인터프리터에 비해 속도가 더 빠름. 
 - 인터프리터: 직접적으로 기계어로 변환되는 건 X. RAM에 탑재되서 실행되야 하므로 컴파일러보다 속도가 
-조금 느림. ex) Python, Ruby 등
+조금 느림. 
+ex) Python, Ruby 등
   
   
 - 자바스크립트에서 예전에는 인터프리터를 많이 사용하였으나, 요즘은 컴파일러로 바뀌었음. (속도가 더 빠르므로)
