--- a/18-09-05.md
+++ b/18-09-05.md
@@ -1,5 +1,6 @@
-# CPU
+# 프로그램
 ---
+## CPU
 
 ## GPU 최적화
 * CSS 애니메이션이 느리게 돌아갈 때, cpu로 계산되던걸 GPU로 계산되게 바꾸면 -> 속도가 빨라질 수 있음.
@@ -26,6 +27,11 @@ ex) Python, Ruby 등
 - 자바스크립트에서 예전에는 인터프리터를 많이 사용하였으나, 요즘은 컴파일러로 바뀌었음. (속도가 더 빠르므로)
 
 ---
+
+# 운영체제
+
+
+
 
 
 
