--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -8,27 +8,35 @@
 ---
 - 값을 재사용하기 위해서 변수를 사용한다.
 - 종류
-  -  `let` 변수: 값을 여러 번 재사용할 때 let 변수를 이용한다.
+  -  `let` 변수: 값을 **여러 번** 대입해서 사용할 수 있다. 
   -  `const`변수: 값을 **한 번만** 대입할 수 있다.
  
- ```js
+
  1. 변수를 선언한 후, 값을 대입하는 방법
+  ```js
  //한 변수의 선언
 let v;
 
 // 값의 대입
 v = 1;
-
+```
 
 2. 변수의 선언과 값의 대입을 동시에
+```js
 let x = 1;
 
 // 두 변수의 선언과 대입
 let y = 2, z = x + y;
+```
 
 // const 변수
+```js
 const c = 1;
-c = 2; // 에러!(`const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
+c = 2; // 에러!
+```
+> 에러가 난 이유?
+<br>
+`const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
 
 // 선언한 변수를 사용하기
 x;
@@ -63,7 +71,9 @@ if (true) {
 ---
 반복문
 - 반복문의 종류: <br>
-`while문`, `for문`
+`while문`
+<br>
+`for문`
  
 - while 구문
 ```js
@@ -92,7 +102,7 @@ cf) 대처방법:
 
 ## 함수(function)
 - 'fuction' 키워드를 이용한 함수 선언
-  ```js
+```js
    function calc(x, y, z) {
   let sum = x + y;
   return sum * z;
@@ -102,8 +112,6 @@ cf) 대처방법:
 ```
 
 - arrow function
-
-
 ```js
 const multiply = (x, y) => x * y;
 ``` 
