--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -39,6 +39,7 @@ c = 2; // 에러!
 `const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
 
 // 선언한 변수를 사용하기
+```js
 x;
 typeof x;
 x * z;
@@ -88,9 +89,11 @@ while (i < 5) {
 > while(true){}일 경우,
 {}안 영역의 코드가 무한반복된다. 
 
-cf) 대처방법: 
- 만약에 javaScript가 무한루프에 빠졌을 경우-> 메뉴- 도구 더보기 - 작업 관리자 누르기
- -> 작업 관리자에 cpu를 많이 잡아먹는 브라우저만 골라서 종료시킨다. 
+cf) 
+ 만약에 javaScript가 무한루프에 빠졌을 경우 대처방법: 
+ <br> 
+ 메뉴- 도구 더보기 - 작업 관리자 누르기
+ -> 작업 관리자에서 cpu를 많이 잡아먹는 브라우저를 골라서 종료시킨다. 
  
 - for 구문
 ```js
@@ -103,24 +106,31 @@ cf) 대처방법:
 ## 함수(function)
 - 'fuction' 키워드를 이용한 함수 선언
 ```js
+//  calc라는 함수를 호출하면서 x, y, z값이 들어온다. 
    function calc(x, y, z) {
   let sum = x + y;
+  // x + y의 연산 결과값을 sum이라는 변수에 대입한다.
   return sum * z;
   // sum * z -> 반환값
+  // clac 함수를 호출한 곳으로 반환값인 sum * z를 반환한다. 
   }
 
 ```
 
+
 - arrow function
 ```js
 const multiply = (x, y) => x * y;
-``` 
+
+
+```
+> 
 - 함수 호출하기
 ```js
 add(1, 2); // 3
 multiply(3, 4); // 12
 ```
-> 함수를 호출하고, 함수는 값을 반환한다.
+> 함수를 호출하고, 함수는 값을 반환해준다. 
 
 
  
