--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -49,17 +49,19 @@ x * z;
  ---
  조건문
  - if 구문
+ ---js
     - if (2 > 1) {
   console.log('괄호 안의 값이 `true`이면 이 영역의 코드가 실행됩니다.');
 } else {
   console.log('괄호 안의 값이 `false`면 이 영역의 코드가 실행됩니다.');
 }
+---
     1. if 괄호 안의 값이 true일 경우
 -> 첫 번째 중괄호 안의 코드가 실행된다.
     2. if 괄호 안의 값이 false일 경우
 -> else 뒤에 있는 중괄호 안의 코드가 실행된다.
 
-  >  ex1) (2 > 1)도 표현식이다. 이 계산의 결과값은 true이다.
+  >  ex) (2 > 1)도 표현식이다. 이 계산의 결과값은 true이다.
  
 ```js
 if (true) {
@@ -68,7 +70,8 @@ if (true) {
   alert ('거짓일 때만 실행됩니다.')
 }
 ```
-> `조건문1인 소괄호()안의 값이 true이므로 첫번째 중괄호{}안에 있는 '참일 때만 실행됩니다.'가 알림창으로 뜬다. 
+
+- `조건문1인 소괄호()안의 값이 true이므로 첫번째 중괄호{}안에 있는 '참일 때만 실행됩니다.'가 알림창으로 뜬다. 
 ---
 반복문
 - 반복문의 종류: <br>
@@ -84,13 +87,13 @@ while (i < 5) {
   i++;
 }
 ```
-> while문은 `조건문`()안의 값이 true일때까지 중괄호{}영역의 코드가 반복해서 실행된다. 
+- while문은 `조건문`()안의 값이 true일때까지 중괄호{}영역의 코드가 반복해서 실행된다. 
 
-> while(true){}일 경우,
+- while(true){}일 경우,
 {}안 영역의 코드가 무한반복된다. 
 
 cf) 
- 만약에 javaScript가 무한루프에 빠졌을 경우 대처방법: 
+ javaScript가 무한루프에 빠졌을 경우 대처방법: 
  <br> 
  메뉴- 도구 더보기 - 작업 관리자 누르기
  -> 작업 관리자에서 cpu를 많이 잡아먹는 브라우저를 골라서 종료시킨다. 
@@ -100,7 +103,7 @@ cf)
  for (let i = 0; i < 5; i++) { // (초기값; 조건; 갱신)
   console.log(`이 코드는 ${i + 1}번 째 실행되고 있습니다.`);
 ```
->  단순 반복을 할 때, for문을 while문보다 더 자주 쓴다.
+- 단순 반복을 할 때, for문을 while문보다 더 자주 쓴다.
  
 
 ## 함수(function)
@@ -121,16 +124,15 @@ cf)
 - arrow function
 ```js
 const multiply = (x, y) => x * y;
-
-
 ```
-> 
+
+
 - 함수 호출하기
 ```js
 add(1, 2); // 3
 multiply(3, 4); // 12
 ```
-> 함수를 호출하고, 함수는 값을 반환해준다. 
+- 함수를 호출하고, 함수는 값을 반환해준다. 
 
 
  
