--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -29,16 +29,16 @@ let x = 1;
 let y = 2, z = x + y;
 ```
 
-// const 변수
+- const 변수
 ```js
 const c = 1;
 c = 2; // 에러!
 ```
-> 에러가 난 이유?
+- 에러가 난 이유?
 <br>
-`const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
+: `const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
 
-// 선언한 변수를 사용하기
+- 선언한 변수를 사용하기
 ```js
 x;
 typeof x;
