--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -34,9 +34,8 @@ let y = 2, z = x + y;
 const c = 1;
 c = 2; // 에러!
 ```
-- 에러가 난 이유?
-<br>
-: `const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
+- 에러가 난 이유? <br>
+: `const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.
 
 - 선언한 변수를 사용하기
 ```js
@@ -93,8 +92,7 @@ while (i < 5) {
 {}안 영역의 코드가 무한반복된다. 
 
 cf) 
- javaScript가 무한루프에 빠졌을 경우 대처방법: 
- <br> 
+ javaScript가 무한루프에 빠졌을 경우 대처방법: <br> 
  메뉴- 도구 더보기 - 작업 관리자 누르기
  -> 작업 관리자에서 cpu를 많이 잡아먹는 브라우저를 골라서 종료시킨다. 
  
