--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -73,10 +73,9 @@ if (true) {
 - `조건문1인 소괄호()안의 값이 true이므로 첫번째 중괄호{}안에 있는 '참일 때만 실행됩니다.'가 알림창으로 뜬다. 
 ---
 반복문
-- 반복문의 종류: <br>
-`while문`
-<br>
-`for문`
+- 반복문의 종류
+  - `while문`
+  - `for문`
  
 - while 구문
 ```js
