--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -29,15 +29,16 @@ let x = 1;
 let y = 2, z = x + y;
 ```
 
-- const 변수
+// const 변수
 ```js
 const c = 1;
 c = 2; // 에러!
 ```
-  - 에러가 난 이유? <br>
-: `const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.
+> 에러가 난 이유?
+<br>
+`const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
 
-- 선언한 변수를 사용하기
+// 선언한 변수를 사용하기
 ```js
 x;
 typeof x;
@@ -48,19 +49,17 @@ x * z;
  ---
  조건문
  - if 구문
- ---js
     - if (2 > 1) {
   console.log('괄호 안의 값이 `true`이면 이 영역의 코드가 실행됩니다.');
 } else {
   console.log('괄호 안의 값이 `false`면 이 영역의 코드가 실행됩니다.');
 }
----
     1. if 괄호 안의 값이 true일 경우
 -> 첫 번째 중괄호 안의 코드가 실행된다.
     2. if 괄호 안의 값이 false일 경우
 -> else 뒤에 있는 중괄호 안의 코드가 실행된다.
 
-  >  ex) (2 > 1)도 표현식이다. 이 계산의 결과값은 true이다.
+  -  ex1) (2 > 1)도 표현식이다. 이 계산의 결과값은 true이다.
  
 ```js
 if (true) {
@@ -69,13 +68,13 @@ if (true) {
   alert ('거짓일 때만 실행됩니다.')
 }
 ```
-
-- `조건문1인 소괄호()안의 값이 true이므로 첫번째 중괄호{}안에 있는 '참일 때만 실행됩니다.'가 알림창으로 뜬다. 
+> `조건문1인 소괄호()안의 값이 true이므로 첫번째 중괄호{}안에 있는 '참일 때만 실행됩니다.'가 알림창으로 뜬다. 
 ---
 반복문
-- 반복문의 종류
-  - `while문`
-  - `for문`
+- 반복문의 종류: <br>
+`while문`
+<br>
+`for문`
  
 - while 구문
 ```js
@@ -85,13 +84,14 @@ while (i < 5) {
   i++;
 }
 ```
-- while문은 `조건문`()안의 값이 true일때까지 중괄호{}영역의 코드가 반복해서 실행된다. 
+> while문은 `조건문`()안의 값이 true일때까지 중괄호{}영역의 코드가 반복해서 실행된다. 
 
-- while(true){}일 경우,
+> while(true){}일 경우,
 {}안 영역의 코드가 무한반복된다. 
 
 cf) 
- javaScript가 무한루프에 빠졌을 경우 대처방법: <br> 
+ 만약에 javaScript가 무한루프에 빠졌을 경우 대처방법: 
+ <br> 
  메뉴- 도구 더보기 - 작업 관리자 누르기
  -> 작업 관리자에서 cpu를 많이 잡아먹는 브라우저를 골라서 종료시킨다. 
  
@@ -100,7 +100,7 @@ cf)
  for (let i = 0; i < 5; i++) { // (초기값; 조건; 갱신)
   console.log(`이 코드는 ${i + 1}번 째 실행되고 있습니다.`);
 ```
-- 단순 반복을 할 때, for문을 while문보다 더 자주 쓴다.
+>  단순 반복을 할 때, for문을 while문보다 더 자주 쓴다.
  
 
 ## 함수(function)
@@ -121,17 +121,33 @@ cf)
 - arrow function
 ```js
 const multiply = (x, y) => x * y;
+
+
 ```
-
-
+> 
 - 함수 호출하기
 ```js
 add(1, 2); // 3
 multiply(3, 4); // 12
 ```
-- 함수를 호출하고, 함수는 값을 반환해준다. 
+> 함수를 호출하고, 함수는 값을 반환해준다. 
 
 
+- 퀴즈 만들기 예제
+```js
+function quiz(q, a) {
+  answer = prompt(q);
+  if (answer == a ) {
+    alert('맞았습니다!')
+  } else {
+    alert('틀렸습니다!')
+  }
+}
+
+quiz('아시안 게임 축구 득점왕은 누구?', '황의조');
+quiz('1 + 2?', '3');
+quiz('인텔 CPU는 몇 세대까지 나왔나요?', '8세대');
+```
  
 
 ## 2. Today I found Out
