--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -24,21 +24,20 @@ v = 1;
 2. 변수의 선언과 값의 대입을 동시에
 ```js
 let x = 1;
-
+s
 // 두 변수의 선언과 대입
 let y = 2, z = x + y;
 ```
 
-// const 변수
+- const 변수
 ```js
 const c = 1;
 c = 2; // 에러!
 ```
 > 에러가 난 이유?
-<br>
-`const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
+    `const` 변수는 값을 **한 번만** 대입할 수 있으므로 값을 1로 대입한 후에 2로 바꿀 수 없다.)
 
-// 선언한 변수를 사용하기
+- 선언한 변수를 사용하기
 ```js
 x;
 typeof x;
@@ -59,7 +58,7 @@ x * z;
     2. if 괄호 안의 값이 false일 경우
 -> else 뒤에 있는 중괄호 안의 코드가 실행된다.
 
-  -  ex1) (2 > 1)도 표현식이다. 이 계산의 결과값은 true이다.
+> ex1) (2 > 1)도 표현식이다. 이 계산의 결과값은 true이다.
  
 ```js
 if (true) {
@@ -71,10 +70,9 @@ if (true) {
 > `조건문1인 소괄호()안의 값이 true이므로 첫번째 중괄호{}안에 있는 '참일 때만 실행됩니다.'가 알림창으로 뜬다. 
 ---
 반복문
-- 반복문의 종류: <br>
-`while문`
-<br>
-`for문`
+- 반복문의 종류: 
+    - `while문`
+    - `for문`
  
 - while 구문
 ```js
@@ -100,7 +98,7 @@ cf)
  for (let i = 0; i < 5; i++) { // (초기값; 조건; 갱신)
   console.log(`이 코드는 ${i + 1}번 째 실행되고 있습니다.`);
 ```
->  단순 반복을 할 때, for문을 while문보다 더 자주 쓴다.
+    -  단순 반복을 할 때, for문을 while문보다 더 자주 쓴다.
  
 
 ## 함수(function)
@@ -130,7 +128,7 @@ const multiply = (x, y) => x * y;
 add(1, 2); // 3
 multiply(3, 4); // 12
 ```
-> 함수를 호출하고, 함수는 값을 반환해준다. 
+    - 함수를 호출하고, 함수는 값을 반환해준다. 
 
 
 - 퀴즈 만들기 예제
