--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -102,6 +102,8 @@ cf)
  
 
 ## 함수(function)
+: 코드 뭉치에 이름을 붙여서 재사용할 수 있다.  
+
 - 'fuction' 키워드를 이용한 함수 선언
 ```js
 //  calc라는 함수를 호출하면서 x, y, z값이 들어온다. 
@@ -130,8 +132,9 @@ multiply(3, 4); // 12
 ```
     - 함수를 호출하고, 함수는 값을 반환해준다. 
 
+- 
+  - 퀴즈 만들기 예제
 
-- 퀴즈 만들기 예제
 ```js
 function quiz(q, a) {
   answer = prompt(q);
@@ -149,13 +152,6 @@ quiz('인텔 CPU는 몇 세대까지 나왔나요?', '8세대');
  
 
 ## 2. Today I found Out
-중원:
->
-
-지혜:
->
-/* 배운 내용 외에 뭔가 깨달음이 왔거나 느낀 바가 있다면 일기처럼 간단하게 적어주시면 됩니다. */
-
-## 3. Reference 
-
-/* 참고할 내용이나 링크를 정리해 주세요. */
+> 컴퓨터 공학 지식을 
+특히 자바스크립트 튜토리얼을 배우면서 빠르게 자바스크립트 이론을 접할 수 있어 좋았다
+코드를 직접 실습해보면서 이해하기 쉽고 재미있었다. 
