--- a/week01-09-05-18-중원-지혜.md
+++ b/week01-09-05-18-중원-지혜.md
@@ -154,5 +154,4 @@ quiz('인텔 CPU는 몇 세대까지 나왔나요?', '8세대');
 ## 2. Today I found Out
 > 컴퓨터 공학 지식을 
 특히 자바스크립트 튜토리얼을 배우면서 빠르게 자바스크립트 이론을 접할 수 있어 좋았다.
-<br>
-코드를 직접 실습해보면서 이해하기 쉽고 재미있었다. 
+> 코드를 직접 실습해보면서 이해하기 쉽고 재미있었다. 
