--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -52,20 +52,20 @@
         - 어떤 요소(element) 안의 공백(whitespace)이 어떻게 처리될지를 나타내는데 사용된다.
 
         - `white-space`:  `normal`
-        연속된 공백이 하나로 병합된다. 소스 안의 줄바꿈 문자는 다른 공백 문자와 같이 취급된다. 
+        연속된 공백이 하나로 병합된다. 소스 안의 줄바꿈 문자는 다른 공백 문자와 같이 취급된다. <br>
         줄 박스를 채우기 위해서 필요에 따라서 줄을 끊는다.
 
         - `white-space`: `nowrap`
-        `normal`과 같이 공백 문자를 병합한다.
+        `normal`과 같이 공백 문자를 병합한다.<br>
         But 텍스트 줄바꿈(text wrapping)을 하지 X.
        
         - `white-space`: `pre`
-            연속된 공백이 하나로 병합된다. 
+            연속된 공백이 하나로 병합된다. <br>
             소스의 줄바꿈 문자나 <br>요소에 의해서만 끊어진다.
 
 
         - `white-space`: `pre-wrap`
-            연속된 공백이 보존된다. 
+            연속된 공백이 보존된다. <br>
             줄은 줄바꿈 문자, <br>,줄 박스를 채우기 위해서 필요에 따라서 끊어진다.
 
 
