--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -61,16 +61,16 @@
        
         - `white-space`: `pre`
             연속된 공백이 하나로 병합된다. <br>
-            소스의 줄바꿈 문자나 <br>요소에 의해서만 끊어진다.
+            소스의 줄바꿈 문자나 `<br>`요소에 의해서만 끊어진다.
 
 
         - `white-space`: `pre-wrap`
             연속된 공백이 보존된다. <br>
-            줄은 줄바꿈 문자, <br>,줄 박스를 채우기 위해서 필요에 따라서 끊어진다.
+            줄은 줄바꿈 문자, `<br>`,줄 박스를 채우기 위해서 필요에 따라서 끊어진다.
 
 
         - `white-space`: `pre-line`
-            연속된 공백이 병합된다. 줄바꿈 문자, <br>, 줄 박스를 채우기 위해서 필요에 따라 끊어진다. 
+            연속된 공백이 병합된다. 줄바꿈 문자, `<br>`, 줄 박스를 채우기 위해서 필요에 따라 끊어진다. 
          
          
     * `border-radius`: 둥근외곽선(rounded border)를 표현하는 방법이다. 하나 혹은 두 개의 반지름을 설정하여 각각 모서리의 굴곡을 설정할 수 있기 때문에, 원이나 타원의 모양으로 정의가 가능하다.
