--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -10,22 +10,22 @@
 ## 개발 방법론
 
   1.  점진적 향상
-  - 개발을 할 때 신기술을 지원하지 않는 환경에서도 접근할 수 있도록 기반을 다져두고 그 위에 신기술을 덮는 것이다.
+    - 개발을 할 때 신기술을 지원하지 않는 환경에서도 접근할 수 있도록 기반을 다져두고 그 위에 신기술을 덮는 것이다.
   2. 우아한 낮춤
-  - 신기술을 먼저 쓴 후에 버전이 낮은 브라우저를 지원할 수 있게 하는 것이다.
+    - 신기술을 먼저 쓴 후에 버전이 낮은 브라우저를 지원할 수 있게 하는 것이다.
 
 
 
    * 속성의 재정의
-    - 콜백 컬러를 background-image보다 먼저(윗줄에) 써줘야 한다.
+      - 콜백 컬러를 background-image보다 먼저(윗줄에) 써줘야 한다.
 
 
    * 메뉴가 클릭 안될 떄
-    - 투명 레이어가 가리고 있는 경우가 많다.
-    -> 항상 눈에 보이는 것만 믿지 말 것.
+     - 투명 레이어가 가리고 있는 경우가 많다.
+      -> 항상 눈에 보이는 것만 믿지 말 것.
 
    * overflow: 넘치는 영역만 처리하는 게 아니라, 다른 트릭에도 쓰인다는 것을 기억할 것.
-    ex) 잃어버렸던 높이를 읽어들임.
+       ex) 잃어버렸던 높이를 읽어들임.
 
 
    * background-color: 페인트
@@ -70,11 +70,14 @@
 
 
         - `white-space`: `pre-line`
-            연속된 공백이 병합된다. 줄바꿈 문자, `<br>`, 줄 박스를 채우기 위해서 필요에 따라 끊어진다. 
+            연속된 공백이 병합된다. <br> 
+            줄바꿈 문자, `<br>`, 줄 박스를 채우기 위해서 필요에 따라 끊어진다. 
          
          
-    * `border-radius`: 둥근외곽선(rounded border)를 표현하는 방법이다. 하나 혹은 두 개의 반지름을 설정하여 각각 모서리의 굴곡을 설정할 수 있기 때문에, 원이나 타원의 모양으로 정의가 가능하다.
-        엘리먼트(element)에 외곽선(border)이 없어돠, 반지름(radius)값은 background 속성에 적용된다. 
-        잘려나가는(clipping) 부분에 대한 정확한 위치는 background-clip 속성값에 따라 결정된다.
+    * `border-radius`: 
+        - 둥근외곽선(rounded border)를 표현하는 방법이다. 
+        - 하나 혹은 두 개의 반지름을 설정하여 각각 모서리의 굴곡을 설정할 수 있기 때문에, 원이나 타원의 모양으로 정의가 가능하다.
+        - 엘리먼트(element)에 외곽선(border)이 없어돠, 반지름(radius)값은 background 속성에 적용된다. 
+        - 잘려나가는(clipping) 부분에 대한 정확한 위치는 background-clip 속성값에 따라 결정된다.
         - 초기값: border-radius: 0 0 0 0
         - 모서리의 둥근외곽선을 시계방향으로 준다.  
