--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -38,9 +38,8 @@
         - z-index는 position 속성이 설정된 엘리먼트에 대해서만 의미를 갖는다.
 
 
-   * `text-shadow`: 글자에 그림자를 생성한다.   
-     `text-shadow`: offset-x | offset-y | blur-radius | color 
-       
+   * `text-shadow`: offset-x | offset-y | blur-radius | color   
+        - 글자에 그림자를 생성한다.   
 ```css
       text-shadow: 1px 0 0  #000,
                     0px 1px 0 #000,
