--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -79,9 +79,16 @@
          
          
    * `border-radius`: 
+        - `border-radius`: `left-top`, `right-top`, `right-bottom`, `left-bottom`
+        - 모서리의 둥근외곽선을 시계방향으로 준다. 
+        - 초기값: border-radius: 0 0 0 0
         - 둥근외곽선(rounded border)를 표현하는 방법이다. 
         - 하나 혹은 두 개의 반지름을 설정하여 각각 모서리의 굴곡을 설정할 수 있기 때문에, 원이나 타원의 모양으로 정의가 가능하다.
-        - 엘리먼트(element)에 외곽선(border)이 없어돠, 반지름(radius)값은 background 속성에 적용된다. 
+        - 엘리먼트(element)에 외곽선(border)이 없어지되, 반지름(radius)값은 background 속성에 적용된다. 
         - 잘려나가는(clipping) 부분에 대한 정확한 위치는 background-clip 속성값에 따라 결정된다.
-        - 초기값: border-radius: 0 0 0 0
         - 모서리의 둥근외곽선을 시계방향으로 준다.  
+        
+        
+        
+  ## 2. Today I found Out
+- 지혜: CSS...
