--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -54,7 +54,8 @@
 
 
         - `white-space`:  `normal`
-        연속된 공백이 하나로 병합된다. 소스 안의 줄바꿈 문자는 다른 공백 문자와 같이 취급된다. <br>
+        연속된 공백이 하나로 병합된다. <br>
+        소스 안의 줄바꿈 문자는 다른 공백 문자와 같이 취급된다. <br>
         줄 박스를 채우기 위해서 필요에 따라서 줄을 끊는다.
 
 
