--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -22,7 +22,7 @@
       - 콜백 컬러를 background-image보다 먼저(윗줄에) 써줘야 한다.
 
 
-   * 메뉴가 클릭 안될 떄
+   * 메뉴가 클릭 안될 
      - 투명 레이어가 가리고 있는 경우가 많다.
       -> 항상 눈에 보이는 것만 믿지 말 것.
 
