--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -79,8 +79,7 @@
             - 줄바꿈 문자, `<br>`, 줄 박스를 채우기 위해서 필요에 따라 끊어진다. 
          
          
-   * `border-radius`: 
-        - `border-radius`: `left-top`, `right-top`, `right-bottom`, `left-bottom`
+   * `border-radius`: `left-top`, `right-top`, `right-bottom`, `left-bottom`
         - 모서리의 둥근외곽선을 시계방향으로 준다. 
         - 초기값: border-radius: 0 0 0 0
         - 둥근외곽선(rounded border)를 표현하는 방법이다. 
