--- a/week02-09-11-18-중원-지혜.md
+++ b/week02-09-11-18-중원-지혜.md
@@ -2,8 +2,8 @@
 
 ## 1. Today I Learned
 
-- 개발을 할 때 항상 고민해야하는 것: 예외 상황 처리를 고민해야 한다.
-- 예외 상황 코드를 잘 만들어야만 한다.
+- 개발을 할 때 항상 고민해야 하는 것: 예외 상황 처리를 고민해야 한다.
+- 예외 상황 코드를 잘 만들어야 한다.
 
 - CSS의 위치는 유지보수 차원에서 되도록 마크업 순서에 따라서 놓는 게 좋다. 
 
@@ -12,6 +12,8 @@
 
   1.  점진적 향상
     - 개발을 할 때 신기술을 지원하지 않는 환경에서도 접근할 수 있도록 기반을 다져두고 그 위에 신기술을 덮는 것이다.
+    
+    
   2. 우아한 낮춤
     - 신기술을 먼저 쓴 후에 버전이 낮은 브라우저를 지원할 수 있게 하는 것이다.
 
