Update 공부, 정리할 내용.md

--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -1,6 +1,8 @@
 
 # 공부할 것
 * Git 온라인 강의 수강
+* 북마크 정리하기(어떨때 사용하는지)(깃헙에)
+* lg gram 오른쪽 마우스 키보드 패드로 하는 방법 검색
 
 # 정리할 내용
 * float를 clear하는 방법
@@ -13,10 +15,34 @@
 * 항상 레퍼런스 찾아보기(책에 의존하지 X. 기술은 끊임없이 변화하고 있다.)
 * apple 사이트 코드 벤치마킹할 것(해상도 관련해서 좋음)
 * 공부할 때 해당 키워드로 유튜브에 검색해볼 것
+* CSS 수업에서 관련 키워드라도 적어두기
+
 
 # 구글에 검색해 볼 키워드
   - reset css
   - css flex
   - normalize
   - '한국형 웹접근성 지침 '2.1검색 ->건너뛰기 링크 읽어보기
+  - css shape로 검색 - https://css-tricks.com/examples/ShapesOfCSS/
+      -> 이 쉬운 사이트와 레퍼런스 번갈아가면서 공부하기 
+  - youtube에 'mozlia reflow repaint'로 검색
+  - CSS Animation 성능 이론과 실제 적용 사례
+    :https://www.slideshare.net/search/slideshow?searchfrom=header&q=wsconf
+  - https://www.the-art-of-web.com/css/timing-function/
+  - css animation library, effect, demo 등 키워드로 검색해보기
+  - learn css로 검색
+   
+# 취업 관련
+회사에서는 내가 제출하는 포트폴리오로 프로젝트를 진행하는게 x때문에,완성이 안되더라도 독특하게 눈에 띄는 효과를 줘보자.
+생각해보라. ex) CSS Animation
+
+
+
+
+
+
+
+
+
+
 
