--- a/week02-09-13-중원-지혜.md
+++ b/week02-09-13-중원-지혜.md
@@ -2,9 +2,9 @@
 
 ## 1. Today I Learned
 
-### Background
+### `Background`
  * 배경은 먼저 만든 게 위로 쌓이고, 나중에 만든 게 아래로 들어간다.
-선언하는 **순서**가 중요하다.
+**선언하는 순서**가 중요하다.
 
 
 * background속성은 개별속성들을 한꺼번에 단축해서 쓸 수 있다. 
@@ -28,7 +28,7 @@
   - `animation-duration`
     - 애니메이션이 재생될 시간의 길이를 지정한다. 애니메이션 시작부터 마지막까지 총 지속시간
   
-  - `animation-timing-function`: ease | ease-in | ease-out | ease-in-out | linear | cubic-bezier(n,n,n,n,);
+  - `animation-timing-function`: ease | ease-in | ease-out | ease-in-out | linear | cubic-bezier(x1,y1,x2,y2);
     - 애니메이션의 속도 곡선의 타입을 지정하는 속성
     - `ease`: 초기값. 천천히 시작 -> 중간에 **빨라짐** -> 서서히 느리게 종료됨
     - `ease-in`: 천천히 시작-> 빠르게 종료
