--- a/week02-09-13-중원-지혜.md
+++ b/week02-09-13-중원-지혜.md
@@ -7,10 +7,10 @@
 **선언하는 순서**가 중요하다.
 
 
-* background속성은 개별속성들을 한꺼번에 단축해서 쓸 수 있다. 
+* `background`속성은 개별속성들을 한꺼번에 단축해서 쓸 수 있다. 
 /를 기준으로 앞쪽이 포지션, /뒤는 사이즈가 된다. (단, 멀티 백그라운드에서는 쓸 수 X.)
-멀티 백그라운드에서는 background 속성에 배경색을 넣지 않고, background-color속성을 꼭 따로 써줘야 한다. 
-선언 순서는 background 속성을 먼저 선언한 뒤에 background-color를 선언해야 함
+멀티 백그라운드에서는 `background` 속성에 배경색을 넣지 않고, `background-color`속성을 꼭 따로 써줘야 한다. 
+선언 순서는 `background` 속성을 먼저 선언한 뒤에 `background-color`를 선언해야 한다.
 
 
 
