--- a/week02-09-13-중원-지혜.md
+++ b/week02-09-13-중원-지혜.md
@@ -16,7 +16,7 @@
 
 ### `Animation`
   
-   * 대표속성인 animation으로 주면 내가 주지 않은 값이 들어갈 수 있다.
+   * 대표속성인 `animation`으로 주면 내가 주지 않은 값이 들어갈 수 있다.
   - `animation-name`과 `animation-duration`은 꼭 함께 **필수로 작성**해야 하는 속성이다.
   
   
