--- a/week02-09-13-중원-지혜.md
+++ b/week02-09-13-중원-지혜.md
@@ -33,7 +33,7 @@
     - `ease`: 초기값. 천천히 시작 -> 중간에 **빨라짐** -> 서서히 느리게 종료됨
     - `ease-in`: 천천히 시작-> 빠르게 종료
     - `ease-out`: 빠르게 시작 -> 천천히 종료
-    - `ease-in-out`: 느리게 시작 -> 중간에 **보** -> 서서히 느리게 종료됨
+    - `ease-in-out`: 느리게 시작 -> 중간에 **보통** -> 서서히 느리게 종료됨
     - `linear`: 시작부터 끝까지 **일정한 속도**로 진행된다.
     - `cubic-bezier(x1,y1,x2,y2)`: 원하는 속도로 만들고 싶을 때 큐빅베지어를 이용하여 포지션 값을 제어한다.
     
