Update 공부, 정리할 내용.md

--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -16,7 +16,10 @@
 * apple 사이트 코드 벤치마킹할 것(해상도 관련해서 좋음)
 * 공부할 때 해당 키워드로 유튜브에 검색해볼 것
 * CSS 수업에서 관련 키워드라도 적어두기
+* 키보드만 두들기는 게 아니라 손코딩, 그림으로 많이 그려보면서 공부할 것
 
+* 익숙하지 않을 떄는 많이 스케치하고 설계해봐야함. 바로 코드만 쳐보는 게 아니라
+(주말에 연습할 것)
 
 # 구글에 검색해 볼 키워드
   - reset css
@@ -33,7 +36,8 @@
   - learn css로 검색
    
 # 취업 관련
-회사에서는 내가 제출하는 포트폴리오로 프로젝트를 진행하는게 x때문에,완성이 안되더라도 독특하게 눈에 띄는 효과를 줘보자.
+회사에서는 내가 제출하는 포트폴리오로 프로젝트를 진행하는게 x때문에,
+완성이 안되더라도 독특하게 눈에 띄는 효과를 줘보자.
 생각해보라. ex) CSS Animation
 
 
