--- a/week02-09-14-18-중원-지혜.md
+++ b/week02-09-14-18-중원-지혜.md
@@ -5,7 +5,7 @@
 - `<section>`은   '장'이나 '절'로 나누기 좋은 콘텐츠이다.
     - 하나의 기능만 가지고도 section을 적용할 수 있다.
 
-- `<fieldset>`은 `<div>`처럼 그루핑하는 역할을 한다.
+- `<fieldset>`은 `<div>`처럼 그루핑하는 역할을 한다. <br>
 But `<form>` 서식을 묶을 때 사용한다는 점에서  `<div>`와 차이가 있다.
 
 
@@ -47,15 +47,23 @@ html4.1, xtml1.0을 혼용한다.
     컴포넌트로는 같이 다녀야 한다. 같이 묶어야하는 개념이다.
 
 
-- 아이디, 비밀번호가 입력서식 옆에 있으니까 레이블이라고 사람은 추측할 수 있지만, 기계는 명확하게 알려줘야 한다.
-    -> 아이디, 비밀번호 글씨를 레이블이라고 알려줘야 한다.
+- 아이디, 비밀번호가 입력서식 옆에 있으니까 레이블이라고 사람은 추측할 수 있지만, 기계는 명확하게 알려줘야 한다.<br>
+    ->아이디, 비밀번호 글씨를 레이블이라고 알려줘야 한다.
 
 - 회원가입, 로그인 관련한 클래스명은
     요즘 경향으로는 login이라는 클래스보다는 sign in, sign up클래스명을 많이 씀. 
 
-- `name`: send하는 순간 name="홍길동"값이 변수로 넘어감.
-    데이터베이스와 연관성이 있다.
-    값을 구분하기 위한 필드이며, 서버로 보낼때의 이름을 말한다.
+
+
+- button type은 입력하지 않으면 default값이 "submit"이다.
+- submit은 같은 form내에 있는 값들을 가지고 서버로 넘어가는 역할을 함. 
+
+- input 상자에 required를 주면 필수 요소로 처리할 수 있다.
+    꼭 입력되어야만 페이지가 넘어가도록 만들 수 있다.
+
+
+- maxlength="6" 최대길이를 6으로 만든다는 의미. 최대길이는 에이전트에서 조절할 수 있다.
+- 최소길이를 원하면 정규표현식(자바스크립트의 일종)이나 스크립트로 처리해야 한다.
 
 
 ## `<input>`태그에서 `id`와 `name`의 차이
@@ -69,24 +77,11 @@ html4.1, xtml1.0을 혼용한다.
 - page 안에서 중복되어 사용이 가능하다.
     action에 해당하는 페이지로 전달하는 파라미터로 사용된다.
     GET/POST 방식으로 값을 전달하고 싶은 태그에 사용한다.
+    
+    
+- send하는 순간 name="홍길동"값이 변수로 넘어감.
+    데이터베이스와 연관성이 있다.
+  
 
-
-
-
-
-- 비밀번호는 보여지는 건 ***로 보이지만, 서버에 값이 넘어갈 때는 입력되는 값이 넘어감. 
-
-- button type은 입력하지 않으면 default값이 "submit"이다.
-- submit은 같은 form내에 있는 값들을 가지고 서버로 넘어가는 역할을 함. 
-
-- input 상자에 required를 주면 필수 요소로 처리할 수 있음.
-    꼭 입력되어야만 페이지가 넘어가도록 만들 수 있다.
-
-
-- maxlength="6" 최대길이를 6으로 만든다는 의미. 최대길이는 에이전트에서 조절할 수 있음 
-- 최소길이를 원하면 정규표현식(자바스크립트의 일종)이나 스크립트로 처리해야 함. 
-
-
-        
         
 ## 2. Today I found Out
