--- a/week02-09-14-18-중원-지혜.md
+++ b/week02-09-14-18-중원-지혜.md
@@ -25,6 +25,7 @@ html4.1, xtml1.0을 혼용한다.
 `<form>`태그는 `<filedset>`과 `<legend>`를 포함시켜도 되고, 생략해도 된다.
 
 
+## `<form>`태그
 ```html
 <form action="https://formspree.io/raye9053@gmail.com" class="login-form"  method="POST">
     <fieldset>
