--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -9,6 +9,8 @@
 * float를 clear하는 방법
 * inline, block, inline-block의 차이와 사용 방법
 * z-index
+* position: relative와 absolute 엇갈려서 주기
+
 
 
 # 공부 방법
@@ -18,9 +20,27 @@
 * 공부할 때 해당 키워드로 유튜브에 검색해볼 것
 * CSS 수업에서 관련 키워드라도 적어두기
 * 키보드만 두들기는 게 아니라 손코딩, 그림으로 많이 그려보면서 공부할 것
-
+* 꼭 여러 브라우저에서 크로스 체크 해보기
 * 익숙하지 않을 떄는 많이 스케치하고 설계해봐야함. 바로 코드만 쳐보는 게 아니라
 (주말에 연습할 것)
+* form이 디자인하기 가장 까다로움 
+* main중에 공지사항이 가장 중요함
+
+* 일단은 진도를 따라가는 게 중요함./ 앞에 배운 거 정리하는 거 보다 .
+
+* 세미나는 꼭 들어봐라.
+유료건 무료건 필요하면 시간과 돈을 투자하라.
+
+* 직접 부수고 만들고 부수고 만들고 해보기
+
+* 그래픽툴에도 관심 가질 것.
+(포토샵, 스케치 등)
+*대한항공' 소스 벤치마킹 해보기(form 관련)
+
+* 자바스크립트 수업에서 sass를 다룰 것임. 
+
+
+* dom조작을 어떻게 할 것인가- 선행학습 하기
 
 # 구글에 검색해 볼 키워드
   - reset css
@@ -35,7 +55,24 @@
   - https://www.the-art-of-web.com/css/timing-function/
   - css animation library, effect, demo 등 키워드로 검색해보기
   - learn css로 검색
-   
+  - 보더에 그라데이션 넣는 법
+  - fmbip.com으로 검색
+  - 구글- javascript keycodes로 검색 http://keycode.info/
+
+  
+  
+  
+
+
+  
+# 유튜브에 검색해볼 키워드
+ - youtube에 'mozlia reflow repaint'로 검색
+ - 유튜브-' 코드스피츠 css float'로 검색
+초보자 대상은 X. 자바스크립트 강좌도 있음.
+기본기가 있어야 함. 난이도가 있는 강좌임.
+
+
+ 
 # 취업 관련
 회사에서는 내가 제출하는 포트폴리오로 프로젝트를 진행하는게 x때문에,
 완성이 안되더라도 독특하게 눈에 띄는 효과를 줘보자.
