--- a/javascript/4일차.md
+++ b/javascript/4일차.md
@@ -155,11 +155,11 @@ arr.push(6);
 
 
 ###  Error 정리
-  * SyntaxError: Unexpected token (28:7)
+  - **SyntaxError: Unexpected token (28:7)**
   - 28번째 줄의 7번째 글자에 문법 에러가 있다는 뜻
 
 
-  * SyntaxError: Assignment to constant variable: a at 29:0
+  - **SyntaxError: Assignment to constant variable: a at 29:0**
   - 29번째 줄의 첫번째 글자에 상수 변수에 대입을 했다는 에러가 있다.
     
 
@@ -167,8 +167,8 @@ arr.push(6);
     let seven = 7;
     let seven = 77;
     ```
-  * SyntaxError: Duplicate declaration "seven" at 33:4
-  - 변수 seven은 중복된 선언이라는 에러이다.
+  - **SyntaxError: Duplicate declaration "seven" at 33:4**
+  - 변수 seven은 중복된 선언이라는 에러이다.**
 
 
 ### 식별자
