--- a/javascript/4일차.md
+++ b/javascript/4일차.md
@@ -8,6 +8,7 @@
 - html의 속성: attribute, javascript의 속성: property
 
 
+
 ### 객체
 
 - 자바스크립트의 객체는 가변 길이이다.
@@ -81,6 +82,8 @@ obj.increaseX();
 console.log(obj.x); 
 ```
 
+
+
 ### 객체와 배열의 차이
 
 객체는 속성 이름과 속성값이 연결되어 있다. 순서가 X . 배열은 순서가 있다.
@@ -102,6 +105,8 @@ arr.push(6);
     ex) .slice(index값, 지우고 싶은 요소의 개수);
 
 
+
+
 ### 언어와 구동 환경
 * 자바스크립트라는 언어와 구동 환경을 나누어서 생각해야 한다.
   - ex) node.js에서는 alert를 쓸 수 X.
@@ -116,16 +121,21 @@ arr.push(6);
 
 
 
+
 ### ES2015, 그 이후
 
 * ES5 2009년에 나온 자바스크립트 버전.
 * ES2015 = ES6
 
 
+
+
 ### 값과 리터럴
 
 * 값과 리터럴을 구분할 줄 알아야 한다. 
   - 리터럴: 값의 표기법을 말한다.
+
+
 
 
 ### 변수 (Variable)
@@ -135,6 +145,7 @@ arr.push(6);
 * `let`은 ES6에서 도입된 변수이다.
 * ES6에서는 `var`를 쓰지 않고, `let`이나 `const`를 사용한다.
 * 'best practice: 좋은 관례' 이다.(프로그래밍에서 많이 쓰이는 용어)
+
 
 
 
@@ -152,6 +163,8 @@ arr.push(6);
 
 
 * token은 프로그래밍에서 문자를 의미한다.
+
+
 
 
 ###  Error 정리
@@ -314,10 +327,10 @@ let b = ++a;
 * 이거 때문에 버그 많이 생김.
 
 * NaN은 JavaScript의 값들 중 유일하게 자기 자신과 같지 않은 값
-  ```js
+```js
   Number.isNaN(1);
 <!-- 결과값: false -->
-   Number.isNaN(NaN);
+  Number.isNaN(NaN);
 <!-- 결과값: true -->
 ```
 
@@ -349,7 +362,7 @@ if (Number.isNaN(parsedA) || Number.isNaN(parsedB)) {
 
 
 
-evaluate(평가)- 표현식을 값으로 반환하는 절차. 계산과 비슷
+* evaluate(평가)- 표현식을 값으로 반환하는 절차. 계산과 비슷
 
 
 #### `-0`
