--- a/javascript/4일차.md
+++ b/javascript/4일차.md
@@ -1,7 +1,10 @@
 
+### 과제 작성
 - 코드를 작성할 때 어떤 아이디어로 작성했는지 주석으로 작성하자.
 - 과제할 때, 어떤 생각으로 시도하려고 했는데, 잘 안됐다 등 주석으로 적을 것.
 
+
+### 값과 리터럴
 - 값으로 변환될 수 있는 부분을 모두 표현식이라 한다.
 - 변수는 값에 붙이는 이름이다.
 
