--- a/javascript/09-27-18.md
+++ b/javascript/09-27-18.md
@@ -319,12 +319,16 @@ let b = ++a;
   parseInt('asdf');
    <!--결과값: NaN -->
   ```
-* 어떤 값이 Nan인지 아닌지를 알고 싶을 때, ==를 쓰면 절대 X!!<br> ===를 써야 됨.
+* 어떤 값이 Nan인지 아닌지를 알고 싶을 때, ==를 쓰면 절대 X!!<br> 
+
+* Number.isNaN()
+* 어떤 값이 NaN인지 아닌지 판별하고 싶을 때 사용
 
 **꼭 기억!!**
 * ===는 숫자 비교에 특화되어 있는 연산자이다.
 * "NaN은 숫자가 아니기 때문에, 어떤 숫자와도 같지 않다."는 규칙이 있다.
 * => 즉, NaN은 number 타입인 NaN가 같지 X
+
 
 * `===NaN`이 들어간 식은<br>무조건 어떤 경우에도 false가 나오는 식임.(NaN은 자기자신과도 같지 X 때문에)
 * 이거 때문에 버그 많이 생김.
