--- a/javascript/헷갈리는 부분.md
+++ b/javascript/헷갈리는 부분.md
@@ -18,3 +18,14 @@
  
 - `some` 메소드
   - predicate을 인수로 받아서, **조건을 만족하는 요소가 하나라도 있는지 검사**한다.
+
+
+
+자바스크립트에서 input으로 값을 입력받고 미리보기 기능을 사용할 경우,
+혹은 keydown / keyup / keypress 등을 사용할 때 혹은 정규식을 변환하는 과정 등에서
+문자나 숫자를 다루는 때에 키값이 아스키코드나 유니코드로 출력될 때 등
+
+* 값.charCodeAt(0) == 문자열 코드를 아스키코드로 표현.
+
+* String.fromCharCode(값) == 유니코드 또는 아스키 코드 번호를, 문자열 코드로 표현.
+
