--- a/javascript/헷갈리는 부분.md
+++ b/javascript/헷갈리는 부분.md
@@ -26,6 +26,13 @@
 문자나 숫자를 다루는 때에 키값이 아스키코드나 유니코드로 출력될 때 등
 
 * 값.charCodeAt(0) == 문자열 코드를 아스키코드로 표현.
+문자열에서 특정 위치의 문자의 유니코드값을 반환 한다. 괄호안 정수는 위와 동일
+  ex> “ABC”.charCodeAt(0) 은 65를 반환(A의 유니코드값)
+
 
 * String.fromCharCode(값) == 유니코드 또는 아스키 코드 번호를, 문자열 코드로 표현.
+  ex> String.fromCharCode(65,66,67)은 "ABC"를 보여준다.
+
+지정하는 인자는 여러개 지정할 수 있다.
+
 
