--- a/함수형 프로그래밍, 객체 더 알아보기- 목차.md
+++ b/함수형 프로그래밍, 객체 더 알아보기- 목차.md
@@ -10,7 +10,7 @@
 
 # 3.4 객체 더 알아보기
 ## 객체 자신의 속성(Own Property)
-## 데이터 속성(Data Property)의 부수속성(Property Attribute)
+## 데이터 속성(Data Property)과 부수속성(Property Attribute)
 ## 접근자 속성(Accessor Property)과 그 부수속성
 ## 객체의 속성 열거하기
 ## 얕은 복사(Shallow Copy) & 깊은 복사(Deep Copy)
