Update 주니어 개발자가 기억 & 주의해야 할 점.md

--- a/javascript/주니어 개발자가 기억 & 주의해야 할 점.md
+++ b/javascript/주니어 개발자가 기억 & 주의해야 할 점.md
@@ -32,10 +32,10 @@
 
 
 # 주니어 개발자가 프로젝트 진행시 주의할 점
-- 프로젝트를 할 때는 해야 하는 일과 하고 싶은 일을 구분해야 한다.
+- 프로젝트를 할 때는 `해야 하는 일`과 `하고 싶은 일`을 구분해야 한다.
 - 주니어 개발자 때는 소요 시간을 예상하기 쉽지 않다.
 - 할 일 목록을 쭉 적어놓고 일정을 잡기
-- 자신이 예상한 시간에 X 2 or X 3을 해서 사장님께 말씀 드리기
+- 자신이 예상한 시간에 X 2  X 3을 해서 사장님께 말씀 드리기
     - ex) 내 예상으로는 3시간 걸리는 기능이라면 9시간 걸릴 것 같다고 하고 일정 잡기
     - 버그를 잡는 데 시간이 오래 걸릴 수 있다. 기술 a를 적용할 수 있다고 생각했는데, a를 적용 못해서 기술 b를 새로 배워서 적용해야 하는 경우가 분명히 생긴다.
     - 꼭 해야 되는 일부터 해야 한다. 
