--- a/javascript/13일차.md
+++ b/javascript/13일차.md
@@ -222,7 +222,7 @@ exports.sub = (x, y) => x - y
 // 메일 주소에 대한 링크를 만들 때 사용
 <a href="tel:01012345678">전화걸기</a>
 ```
-![http-url-anatomy](./18.10.29/http-url-anatomy.png)
+![http-url-anatomy](https://fds11.github.io/fds-nodejs-http/1-2-1-http.html)
 <!-- https://www.example.com:3000/path/resource?id=123#section-id -->
 - `https://www.example.com:3000`까지는 `서버 주소`
     - 그림이 잘못되어있음. 3000 뒤의 /는 경로에 포함됨.
@@ -232,8 +232,7 @@ exports.sub = (x, y) => x - y
 - 8번: #section-id : 문서의 특정 부분을 가리킬 때
 - `#(해시)`를 기억할 것!
 
-ex) 
-https://www.google.com/search?source=hp&ei=PaDWW7T7EImz8QWZ8ZKoCg&q=http&oq=http&gs_l=psy-ab.3..0i131k1l5j0j0i131k1j0i3k1j0l2.989.1350.0.1568.4.3.0.1.1.0.138.248.0j2.2.0....0...1c.1.64.psy-ab..1.3.255....0._7JtWYsiHlc
+- ex) https://www.google.com/search?source=hp&ei=PaDWW7T7EImz8QWZ8ZKoCg&q=http&oq=http&gs_l=psy-ab.3..0i131k1l5j0j0i131k1j0i3k1j0l2.989.1350.0.1568.4.3.0.1.1.0.138.248.0j2.2.0....0...1c.1.64.psy-ab..1.3.255....0._7JtWYsiHlc
 ---
 
 [해시태그(#)](https://s.codepen.io/dbeat999/debug/pxBJNO/yoAZEWKOwOZr)
