--- a/javascript/13일차.md
+++ b/javascript/13일차.md
@@ -222,7 +222,7 @@ exports.sub = (x, y) => x - y
 // 메일 주소에 대한 링크를 만들 때 사용
 <a href="tel:01012345678">전화걸기</a>
 ```
-![http-url-anatomy](https://fds11.github.io/fds-nodejs-http/1-2-1-http.html)
+![http-url-anatomy](C:\Users\raye0\Desktop\18.10.29/http-url-anatomy.png)
 <!-- https://www.example.com:3000/path/resource?id=123#section-id -->
 - `https://www.example.com:3000`까지는 `서버 주소`
     - 그림이 잘못되어있음. 3000 뒤의 /는 경로에 포함됨.
@@ -246,10 +246,10 @@ exports.sub = (x, y) => x - y
 
 #### Percent Encoding
 - 주소 표시줄
-https://www.google.co.kr/search?q=%ED%95%9C%EA%B5%AD&oq=%ED%95%9C%EA%B5%AD&aqs=chrome..69i57j69i61l2j69i65l2j69i59.2351j0j7&sourceid=chrome&ie=UTF-8
+- https://www.google.co.kr/search?q=%ED%95%9C%EA%B5%AD&oq=%ED%95%9C%EA%B5%AD&aqs=chrome..69i57j69i61l2j69i65l2j69i59.2351j0j7&sourceid=chrome&ie=UTF-8
 
 - 크롬 개발자 도구 -> Network-> Name: search?..로 된 파일을 누르기 -> Reqeust URL
-https://www.google.co.kr/search?q=%ED%95%9C%EA%B5%AD&oq=%ED%95%9C%EA%B5%AD&aqs=chrome..69i57j69i61l2j69i65l2j69i59.2351j0j7&sourceid=chrome&ie=UTF-8
+- https://www.google.co.kr/search?q=%ED%95%9C%EA%B5%AD&oq=%ED%95%9C%EA%B5%AD&aqs=chrome..69i57j69i61l2j69i65l2j69i59.2351j0j7&sourceid=chrome&ie=UTF-8
 
 
 #### Response Status
