--- a/javascript/14일차.md
+++ b/javascript/14일차.md
@@ -73,6 +73,8 @@ app.get('/articles/:id', (req, res) => {
     - 인자가 텍스트면 text/html, 객체면 application/json 타입으로 응답
 ---
 
+[Express 실습](https://glitch.com/edit/#!/tranquil-soccer?path=server.js:1:0)
+
 # Template Language
 ## Template Engine
 -  데이터를 결합해 문서를 생성하는 프로그램, 혹은 라이브러리
@@ -84,7 +86,7 @@ app.get('/articles/:id', (req, res) => {
 - JavaScript 코드를 템플릿 안에서 그대로 쓸 수 있음
 - EJS VSCode Extension
 - EJS에서 Emmet 사용하기
-
+[EJS 예제](https://glitch.com/edit/#!/energetic-sword?path=views/index.ejs:1:0)
 - Example
 ```html
 <%# index.ejs %>
@@ -105,7 +107,7 @@ app.get('/articles/:id', (req, res) => {
 </html>
 ```
 ### Express에서 EJS 사용하기
-- EJS 실습 예제
+- [EJS 실습](https://glitch.com/edit/#!/mire-damselfly?path=README.md:1:0)
 
 ### 파일을 그대로 제공하기 
 - 내가 가지고 있는 파일을 그대로 응답할 수 있다.
@@ -316,7 +318,8 @@ Content-Type: application/x-www-form-urlencoded
 
 home=Cosby&favorite+flavor=flies
 ```
-- HTML Form 예제
+
+ [HTML Form 예제 - 할일 관리 웹 서비스](https://glitch.com/edit/#!/topaz-kitty?path=server.js:1:0)
     - 브라우저의 새로고침은 이전에 보냈던 요청을 그대로 보내는 것이다.
     - 이런 일이 발생하지 않기 위해서 redirect를 하는 것이다.
     - redirect 하지 x면, 새로고침을 여러 번 누르면 -> POST로 요청이 계속 감
