--- a/javascript/14일차.md
+++ b/javascript/14일차.md
@@ -85,7 +85,7 @@ app.get('/articles/:id', (req, res) => {
 - Node.js 생태계에서 가장 많이 사용되는 템플릿 엔진
 - JavaScript 코드를 템플릿 안에서 그대로 쓸 수 있음
 - EJS VSCode Extension
-- EJS에서 Emmet 사용하기
+- EJS에서 Emmet 사용하기  
 [EJS 예제](https://glitch.com/edit/#!/energetic-sword?path=views/index.ejs:1:0)
 - Example
 ```html
@@ -116,7 +116,6 @@ app.get('/articles/:id', (req, res) => {
 
 
 ---
-- 코딩 퀴즈 2번 풀이
 [코딩 퀴즈 2번 풀이](https://codepen.io/dbeat999/pen/ePMZap)
 - 코드를 짤 때 순서: 상태로부터 화면을 그리는 코드를 먼저 짜고, 그 후에 이벤트 리스너 코드를 짜는 게 쉽다.
 ---
@@ -319,7 +318,7 @@ Content-Type: application/x-www-form-urlencoded
 home=Cosby&favorite+flavor=flies
 ```
 
- [HTML Form 예제 - 할일 관리 웹 서비스](https://glitch.com/edit/#!/topaz-kitty?path=server.js:1:0)
+- [HTML Form 예제 - 할일 관리 웹 서비스](https://glitch.com/edit/#!/topaz-kitty?path=server.js:1:0)
     - 브라우저의 새로고침은 이전에 보냈던 요청을 그대로 보내는 것이다.
     - 이런 일이 발생하지 않기 위해서 redirect를 하는 것이다.
     - redirect 하지 x면, 새로고침을 여러 번 누르면 -> POST로 요청이 계속 감
