--- a/javascript/14일차.md
+++ b/javascript/14일차.md
@@ -73,7 +73,7 @@ app.get('/articles/:id', (req, res) => {
     - 인자가 텍스트면 text/html, 객체면 application/json 타입으로 응답
 ---
 
-[Express 실습](https://glitch.com/edit/#!/tranquil-soccer?path=server.js:1:0)
+- [Express 실습](https://glitch.com/edit/#!/tranquil-soccer?path=server.js:1:0)
 
 # Template Language
 ## Template Engine
@@ -86,7 +86,8 @@ app.get('/articles/:id', (req, res) => {
 - JavaScript 코드를 템플릿 안에서 그대로 쓸 수 있음
 - EJS VSCode Extension
 - EJS에서 Emmet 사용하기  
-[EJS 예제](https://glitch.com/edit/#!/energetic-sword?path=views/index.ejs:1:0)
+---
+- [EJS 예제](https://glitch.com/edit/#!/energetic-sword?path=views/index.ejs:1:0)
 - Example
 ```html
 <%# index.ejs %>
@@ -116,7 +117,7 @@ app.get('/articles/:id', (req, res) => {
 
 
 ---
-[코딩 퀴즈 2번 풀이](https://codepen.io/dbeat999/pen/ePMZap)
+- [코딩 퀴즈 2번 풀이](https://codepen.io/dbeat999/pen/ePMZap)
 - 코드를 짤 때 순서: 상태로부터 화면을 그리는 코드를 먼저 짜고, 그 후에 이벤트 리스너 코드를 짜는 게 쉽다.
 ---
 
@@ -244,7 +245,7 @@ account.balance; // 10000
 - 현업에서는 다들 사용하고 있음.
 - 클래스 필드는 최신 문법이라서 일반 레플에서는 실행 X.
 
-[constructor vs class repl 코드](https://repl.it/@seungha/constructor-vs-class?language=javascript)
+- [constructor vs class repl 코드](https://repl.it/@seungha/constructor-vs-class?language=javascript)
 ```js
 // constructor vs class
 class Person {
@@ -325,4 +326,4 @@ home=Cosby&favorite+flavor=flies
     - redirect 하면, 새로고침을 여러 번 누르면-> GET으로 요청이 계속 감
     - DOM API만 사용하면 -> 브라우저 내장 UI인 뒤로 가기, 앞으로 가기 버튼 등이 잘 작동하지 않는다.
 
-[MIME 타입](https://developer.mozilla.org/ko/docs/Web/HTTP/Basics_of_HTTP/MIME_types)
+- [MIME 타입](https://developer.mozilla.org/ko/docs/Web/HTTP/Basics_of_HTTP/MIME_types)
