--- a/javascript/13일차.md
+++ b/javascript/13일차.md
@@ -221,7 +221,7 @@ exports.sub = (x, y) => x - y
 // 메일 주소에 대한 링크를 만들 때 사용
 <a href="tel:01012345678">전화걸기</a>
 ```
-- ![HTTP URL Anatomy](https://cascadingmedia.com/assets/images/insites/2015/02/url-anatomy/url-anatomy-55598c24.png){: width="100" height="100"}
+- ![HTTP URL Anatomy](https://cascadingmedia.com/assets/images/insites/2015/02/url-anatomy/url-anatomy-55598c24.png){: width="50%" height="50%"}
 - `https://www.example.com:3000/path/resource?id=123#section-id`
 - `https://www.example.com:3000`까지는 `서버 주소`
     - 그림이 잘못되어있음. 3000 뒤의 /는 경로에 포함됨.
