--- a/javascript/15일차.md
+++ b/javascript/15일차.md
@@ -310,7 +310,8 @@ add2AndPrint(3); // `add2AndPrint`를 호출
 function sleep(milliseconds) {
     // Data.now()는 유닉스 시간
   const start = Date.now();
-  // Data.now()가 실행된 시점의 유닉스 시간(이거는 안 바뀌는 것임) - 현재 Data.now()실행한 유닉스 시간(시간이 흘렀으니까 start보다는 큰 숫자를 반환함)
+  // Data.now()가 실행된 시점의 유닉스 시간(이거는 안 바뀌는 것임) 
+  //- 현재 Data.now()실행한 유닉스 시간(시간이 흘렀으니까 start보다는 큰 숫자를 반환함)
   // while (10, 20, 30........ < 5000)
   while ((Date.now() - start) < milliseconds);
 }
