--- a/React/면접문제.md
+++ b/React/면접문제.md
@@ -1,6 +1,6 @@
 
 - React를 사용했을 때 속도가 느리면 어떻게 할 것인가?
     - -> PureComponent에 shouldComponent를 적용한다.
-- ontextAPI란 무엇인가?
+- contextAPI란 무엇인가?
 
 - 바닐라 자바스크립트 이론
