--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -12,6 +12,7 @@
 * position: relative와 absolute 엇갈려서 주기
 * find, findIndexOf 정리
 * 타입 체크하기
+* location 관련한 코드 다시 보기(node 개발한 내용)
 
 # 공부 방법
 * 기승전 MDN이다. 
