--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -14,6 +14,8 @@
 * 타입 체크하기
 * location 관련한 코드 다시 보기(node 개발한 내용)
 
+string.push가 되어 .push is jot a function 에러를 만났다.
+
 # 공부 방법
 * 기승전 MDN이다. 
 * 항상 레퍼런스 찾아보기(책에 의존하지 X. 기술은 끊임없이 변화하고 있다.)
