--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -1,5 +1,9 @@
 
 # 공부할 것
+* SQL
+* Angular.js
+* Java
+* Spring / Spring Boot
 * Git 온라인 강의 수강
 * 북마크 정리하기(어떨때 사용하는지)(깃헙에)
 * lg gram 오른쪽 마우스 키보드 패드로 하는 방법 검색
