--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -5,6 +5,7 @@
 * Angular.js
 * Java
 * Spring / Spring Boot
+* Spring Boot로 게시판 
 * Git 온라인 강의 수강
 * 북마크 정리하기(어떨때 사용하는지)(깃헙에)
 * lg gram 오른쪽 마우스 키보드 패드로 하는 방법 검색
