--- a/공부, 정리할 내용.md
+++ b/공부, 정리할 내용.md
@@ -1,5 +1,6 @@
 
 # 공부할 것
+
 * Cofluence / Jira
 * H2, MyBatis
 * SQL
@@ -7,6 +8,7 @@
 * Java
 * Spring / Spring Boot
 * Spring Boot로 restApi 만들기
+* Spring Boot, Spring 차이
 * Spring Boot로 게시판 
 * Spring 강의 예제 코드
 * Git 온라인 강의 수강
