--- a/Java의 정석/객체지향개념1.md
+++ b/Java의 정석/객체지향개념1.md
@@ -227,3 +227,110 @@ class CarTest3 {
     }
 }
 ```
+
+## 6. 변수의 초기화
+### 6.1 변수의 초기화
+- 변수를 선언하고 처음으로 값을 저장하는 것
+- 멤버 변수(인스턴스 변수, 클래스 변수)와 배열은 각 타입의 기본값으로 자동초기화되므로 **초기화 생략 가능**
+- **지역 변수는 사용 전에 꼭!!! 초기화를 해주어야 한다.** 
+
+### 6.2 멤버변수의 초기화
+#### 멤버변수의 초기화 방법
+1. 명시적 초기화
+```java
+class Car {
+    int door = 4; // 기본형(primitive) 변수의 초기화
+    Engine e = new Engine(); // 참조형(reference type) 변수의 초기화
+     // ...
+}
+```
+
+2. 생성자(constructor)
+```java
+Car (String color, String gearType, int door) {
+    this.color = color;
+    this.gearType = gearType;
+    this.door = door;
+}
+```
+
+3. 초기화 블럭(initialization block)
+- 인스턴스 초기화 블럭: `{}`
+- 클래스 초기화 블럭: `static {}`
+
+### 6.3 초기화 블럭(initialization block)
+- 클래스 초기화 블럭: 클래스변수의 복잡한 초기화에 사용되며 클래스가 로딩될 때 실행된다.
+- 인스턴스 초기화 블럭: 생성자에서 공통적으로 수행되는 작업에 사용되며,
+**인스턴스가 생성될 때마다** **생성자보다 먼저!** 실행된다. 
+ ```java
+class InitBlock {
+    static { /* 클래스 초기화블럭 입니다. */}
+    {/* 인스턴스 초기화블럭 입니다. */}
+    //...
+}
+```
+   
+```java
+class staticBlockTest {
+    static int[] arr = new int[10]; // 명시적 초기화
+    
+    static {  // 배열 arr을 1 ~ 10사이의 값으로 채운다.
+        for (int i = 0; i < arr.length; i++) {
+            arr[i] = (int) (Math.random() * 10) + 1;
+        }
+    }
+    // ...
+}
+```
+
+### 6.4 멤버변수의 초기화 시기와 순서
+- 클래스변수 초기화 시점: **클래스가 처음 로딩될 때 한 번**
+- 인스턴스변수 초기화 시점: **인스턴스가 생성될 때 마다**
+
+#### 예제1
+```java
+class InitTest {
+    static int cv = 1; // 명시적 초기화
+    int iv = 1; // 명시적 초기화
+    
+    static  {cv = 2;} // 클래스 초기화 블럭
+    {iv = 2;} // 인스턴스 초기화 블럭
+    
+    InitTest() { // 생성자
+        iv = 3;
+    }
+}
+```
+```java
+InitTest it = new InitTest();
+```
+- ![image](https://user-images.githubusercontent.com/37353837/65743212-979e7400-e12e-11e9-9aa2-da6b3cc7bc16.png)
+
+
+#### 예제2
+```java
+public class Product {
+    static int count = 0; // 생성된 인스턴스의 수를 저장하기 위한 변수
+    int serialNo; // 인스턴스 고유의 번호
+
+    { // 인스턴스 초기화 블럭: 모든 생성자에서 공통적으로 수행될 코드
+        ++count;
+        serialNo = count;
+    }
+
+    public Product () {}
+}
+
+class ProductTest {
+    public static void main(String[] args) {
+        Product p1 = new Product();
+        Product p2 = new Product();
+        Product p3 = new Product();
+
+        System.out.println("p1의 제품번호는" + p1.serialNo);
+        System.out.println("p2의 제품번호는" + p2.serialNo);
+        System.out.println("p3의 제품번호는" + p3.serialNo);
+        System.out.println("생산된 제품의 수는 모두" + Product.count + "개 입니다");
+    }
+}
+```
